# invenio-vocabularies

./: .editorconfig  .gitignore  CHANGES.rst  pyproject.toml  run-tests.sh  setup.cfg
.github/workflows/: i18n-push.yml  pypi-publish.yml
.tx/: config
invenio_vocabularies/: __init__.py
invenio_vocabularies/assets/semantic-ui/js/invenio_vocabularies/src/contrib/forms/Funding/: FundingFieldItem.js
invenio_vocabularies/contrib/affiliations/: schema.py
invenio_vocabularies/contrib/awards/: schema.py
invenio_vocabularies/contrib/funders/: schema.py
invenio_vocabularies/contrib/names/: schema.py
invenio_vocabularies/contrib/subjects/: schema.py
invenio_vocabularies/datastreams/: readers.py
invenio_vocabularies/services/: schema.py
tests/datastreams/: test_readers.py
tests/resources/: test_tasks_resources.py
